# fastapi-template

./: Dockerfile  pyproject.toml
src/: main.py
src/clesiemo3/router/: __init__.py  llm.py
tests/: test_main.py
