[tool.poetry]
name = "fastapi-template"
version = "0.1.0"
description = ""
authors = ["clesiemo3 <clesiemo3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.0"
pydantic-settings = "^2.1.0"
uvicorn = "^0.25.0"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
coverage = "^7.4.0"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# pyproject.toml
[tool.pytest.ini_options]
pythonpath = [
  "src"
]
testpaths = [
    "tests",
]
